🚀 1단계 - 경로 조회 타입 추가 (#343)
* docs : add request parameters at docs

* refactor : move steps

* refactor : add abstract method for common config docs filter

* test : modify acceptance test (add path type and duration property)

* test : refactor test and product code for add duration

* refactor : add get path type